# chatmd

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/chatmd/: __init__.py  __main__.py  cli.py  exceptions.py
src/chatmd/commands/: __init__.py  agent_lifecycle.py  doctor.py  init_workspace.py  migrations.py  mode.py  service.py  upgrade.py  win_service.py
src/chatmd/engine/: __init__.py  agent.py  confirm.py  cron_inline.py  cron_log.py  cron_parser.py  cron_safety.py  cron_scheduler.py  cron_state.py  parser.py  reference_resolver.py  router.py  scheduler.py  state.py
src/chatmd/i18n/: __init__.py  en.py  zh_CN.py
src/chatmd/infra/: __init__.py  config.py  file_writer.py  git_sync.py  git_utils.py  index_manager.py  notification.py  offline_queue.py  pid_utils.py
tests/: conftest.py  test_ai_preserve_text.py  test_ai_skills.py  test_ai_writing_skills.py  test_auto_upload.py  test_bind_skill.py  test_bot_notification.py  test_builtin_skills.py  test_canvas_skill.py  test_config.py  test_confirm.py  test_cron_inline.py  test_cron_integration.py  test_cron_parser.py  test_cron_safety.py  test_cron_scheduler.py  test_cron_skill.py  test_cron_skill_extended.py  test_cron_state.py  test_daily_note_skill.py  test_datetime_skills.py  test_doctor.py  test_e2e.py  test_e2e_v020.py  test_e2e_v022.py  test_fence_parser.py  test_file_watcher_assistant.py  test_file_writer.py  test_git_sync.py  test_git_utils.py  test_graceful_shutdown.py  test_hot_reload.py  test_i18n.py  test_inbox_skill.py  test_index_manager.py  test_init.py  test_inline_cmd.py  test_interaction_dir.py  test_kernel_gate.py  test_la_skill.py  (+29 more)
(+26 files in other folders)
